<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Polleo</string>

    <string name="network_problems_try_reload">Network problems.\nTry to reload the application.</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="tap_to_enter">Tap to enter</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="subscribe">Subscribe</string>
    <string name="statistic">Statistic</string>
    <string name="subscribed">Subscribed</string>
    <string name="official">Public</string>
    <string name="custom">My packs</string>
    <string name="create_pack">Create</string>
    <string name="suggest">Suggest</string>
    <string name="suggest_poll">Suggest poll</string>
    <string name="polls_loading_error">Polls loading error :(</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="retry">Retry</string>
    <string name="send">Send</string>
    <string name="start">Start</string>
    <string name="no_more_new_unvoted_polls">No more new polls yet.\nCome back later :)</string>
    <string name="no_more_new_voted_polls">You did not answer any of questions.\nDo that!</string>


    <string name="button_reload">Reload</string>

</resources>