<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="42dp"
        android:gravity="center_horizontal"
        android:text="@string/set_up_your_profile"
        android:textColor="@color/white" />

    <TextView
        style="@style/Text.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="start"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/vgRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:buttonTint="@color/red"
            android:paddingStart="8dp"
            android:text="@string/female"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:buttonTint="@color/blue"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:text="@string/male"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:buttonTint="@color/mustard"
            android:paddingStart="8dp"
            android:text="@string/other"
            android:textColor="@color/mustard"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        style="@style/Text.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/age" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAge"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/tap_to_enter"
        android:textColorHint="@color/white_50"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieAge"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvFinish"
        style="@style/Text.Button.White.Outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="32dp"
        android:clickable="true"
        android:enabled="false"
        android:text="Finish" />

    <ProgressBar
        android:id="@+id/vProgress"
        android:layout_width="48dp"
        android:layout_gravity="end"
        android:layout_height="48dp"
        android:visibility="gone"
        android:layout_margin="32dp"
        android:indeterminateTint="@color/white" />

</LinearLayout>