<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/vgContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="vgTop, tvTop, tvTopCount, vgBottom, tvBottom, tvBottomCount, tvStatistic, tvNext"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/vProgress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vgToolbar"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/vgNoPolls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/vgToolbar"
        tools:visibility="gone">

        <TextView
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/no_more_new_unvoted_polls"
            android:textColor="@color/white_25" />

        <TextView
            android:id="@+id/tvHistory"
            style="@style/Text.Button.White.Outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="Show statistic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vgError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/vgToolbar"
        tools:visibility="gone">

        <TextView
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:text="@string/polls_loading_error" />

        <TextView
            android:id="@+id/tvRetry"
            style="@style/Text.Button.White.Outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/retry" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/vgTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/selector_shape_red_25"
        app:layout_constraintBottom_toTopOf="@id/vgBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:tag=""
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvTop"
        app:layout_constraintEnd_toEndOf="@id/vgTop"
        app:layout_constraintHeight_max="170dp"
        app:layout_constraintStart_toStartOf="@id/vgTop"
        app:layout_constraintTop_toTopOf="@id/vgTop"
        tools:alpha="1"
        tools:src="@drawable/img_onboarding_premium"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:alpha="0"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="150"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tvTopCount"
        app:layout_constraintEnd_toEndOf="@id/vgTop"
        app:layout_constraintStart_toStartOf="@id/vgTop"
        app:layout_constraintTop_toBottomOf="@id/ivTop"
        app:layout_goneMarginTop="40dp"
        tools:alpha="0.5"
        tools:text="Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag Nike Air Mag " />

    <TextView
        android:id="@+id/tvTopCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:alpha="0"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/vgTop"
        app:layout_constraintEnd_toEndOf="@id/vgTop"
        app:layout_constraintStart_toStartOf="@id/vgTop"
        tools:alpha="0.5"
        tools:text="36% (192)" />

    <FrameLayout
        android:id="@+id/vgBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/selector_shape_blue_25"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vgTop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:tag=""
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/vgBottom"
        app:layout_constraintEnd_toEndOf="@id/vgBottom"
        app:layout_constraintHeight_max="170dp"
        app:layout_constraintStart_toStartOf="@id/vgBottom"
        app:layout_constraintTop_toBottomOf="@id/tvBottom"
        tools:alpha="1"
        tools:src="@drawable/img_onboarding_premium"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:alpha="0"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="150"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/ivBottom"
        app:layout_constraintEnd_toEndOf="@id/vgBottom"
        app:layout_constraintStart_toStartOf="@id/vgBottom"
        app:layout_constraintTop_toBottomOf="@id/tvBottomCount"
        app:layout_goneMarginBottom="40dp"
        tools:alpha="1"
        tools:text="Option 2 Option 2 Option 2 Option 2 Option 2 Option 2 " />

    <TextView
        android:id="@+id/tvBottomCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginHorizontal="16dp"
        android:alpha="0"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/vgBottom"
        app:layout_constraintStart_toStartOf="@id/vgBottom"
        app:layout_constraintTop_toTopOf="@id/vgBottom"
        tools:alpha="0.5"
        tools:text="64% (391)" />

    <LinearLayout
        android:id="@+id/vgToolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_vertical"
            android:padding="24dp"
            android:src="@drawable/ic_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvPackTitle"
            style="@style/Text.Toolbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            tools:text="Pack name" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvStatistic"
        style="@style/Text.Button.White.Free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_stats_24"
        android:paddingVertical="12dp"
        android:paddingStart="20dp"
        android:text="@string/statistic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvNext"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvNext"
        style="@style/Text.Button.White.Outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_arrow_forward_16"
        android:paddingVertical="12dp"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvStatistic"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>